--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,10 @@
     <string name="show">Hiển thị</string>
 
     //place_hoder
-    <string name="fist">nhập Fistname: </string>
-    <string name="last">nhập LastName: </string>
-    <string name="email">nhập Email: </string>
-    <string name="pas">nhập Password: </string>
+    <string name="fist">Fistname: </string>
+    <string name="last">LastName: </string>
+    <string name="email">Email: </string>
+    <string name="pas">Password: </string>
     <string name="_pas">nhập lại Password: </string>
     //tiêu đề
     <string name="registration">registration</string>
@@ -25,7 +25,10 @@
     <string name="full">Fullname: </string>
     <string name="register">register</string>
     <string name="logout">Logout</string>
-    <string name="login">login</string>
+    <string name="login">Login</string>
+    //text link
+    <string name="text_register">"Don't have an account yet?"</string>
+    <string name="text_login">Already have an account?</string>
     //link
     <string name="link_login"><font color='blue'> sign in!</font></string>
     <!--    <string name="link_register">"<font color='#FF000000'> </font><font color= '#02157C'></font>"</string>-->
@@ -34,6 +37,12 @@
     <string name="type">Type something...</string>
     <string name="username">Username</string>
     <string name="status">offline </string>
+    //profile bar
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
+    //check box
+    <string name="male">Nam</string>
+    <string name="female">Nữ</string>
 
     //spiner
     <array name="sex">\
