--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="register">register</string>
     <string name="logout">Logout</string>
     <string name="login">Login</string>
+    <string name="Contact">Contact</string>
     //text link
     <string name="text_register">"Don't have an account yet?"</string>
     <string name="text_login">Already have an account?</string>
@@ -49,6 +50,8 @@
         <item>Nam</item>
         <item>Nữ</item>
     </array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
