--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,10 @@
     </array>
     //menu
     <string name="setting">Setting</string>
+    <string name="shop">Shop</string>
     <string name="friends">Friends</string>
     <string name="Contact">Contact</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
